// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user reducer should handle SET_LOADING 1`] = `
Object {
  "loading": true,
  "repos": Array [],
  "user": Object {},
  "users": Array [],
}
`;

exports[`user reducer should return the initial state 1`] = `
Object {
  "loading": false,
  "repos": Array [],
  "user": Object {},
  "users": Array [],
}
`;
